Fix image spacing on pattern library index page

--- a/src/assets/scss/app/_variables.scss
+++ b/src/assets/scss/app/_variables.scss
@@ -179,7 +179,7 @@
 		$evo-site-pattern-library-band-tab-panel-background-repeat: no-repeat;
 		$evo-site-pattern-library-band-tab-panel-background-size: auto;
 		$evo-site-pattern-library-band-tab-panel-background-position: right -200px top 76px;
-		$evo-site-pattern-library-band-tab-panel-padding: rem-calc(80 15 130 15);
+		$evo-site-pattern-library-band-tab-panel-padding: rem-calc(80 15 75 15);
 		$evo-site-pattern-library-band-tab-panel-marketing-content-padding: rem-calc(0 30);
 		$evo-site-pattern-library-band-tab-panel-marketing-content-padding-large: rem-calc(40 0 40 40);;
 		$evo-site-pattern-library-band-tab-panel-marketing-content-keyline-border-color: $onyx-dark-10;
